# qa.guru.homework_19

./: .gitignore  config.py  pyproject.toml
src/utils/: attach.py
tests/: conftest.py
tests/android/: test_wikipedia.py
tests/ios/: test_sample_app.py
